[package]
name = "vectorkv"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = "3.19.0"
rand = "0.10.0-rc.5"
once_cell = "1.21.3"
anyhow = "1.0"
tokio = { version = "1.41", features = ["full"] }      # 异步 runtime
bytes = "1.4"                                        # buffer
async-trait = "0.1"
crc32c = "0.6.8"
